green and white header element fixes

--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -1,8 +1,25 @@
+.white {
+	postion: relative;
+}
+
 @media (max-width: 800px) {
 
     #wrapper {
         width: 100%;
         color: red;
+    }
+
+    #header {
+    	height: 100%;
+		background-position: 100% 100%;
+		background-size: 100% 100%;
+		width: 100%;
+    }
+
+    .white {
+    	background-position: 100% 100%;
+    	background-size: 100% 100%;
+    	width: 100%;
     }
 
 }
