--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -1,12 +1,20 @@
+body {
+		margin: 1em;
+	}
+
 .white {
 	position: relative;
+	height: auto;
 }
 
 @media (max-width: 800px) {
 
     #wrapper {
         width: 100%;
-        color: red;
+    }
+
+    .main {
+    	background-size: 100% 100%;
     }
 
     #header {
@@ -17,9 +25,19 @@
     }
 
     .white {
-    	background-position: 100% 100%;
-    	background-size: 100% 100%;
+    	background-position: 5% 100%;
+    	background-size: 65% 90%;
     	width: 100%;
+    	height:5em;
+    	margin: 0px;
+
+    }
+
+    .embelem {
+    	background-size: auto 100%;
+    	margin: -1em 0px 0px 4%;
+    	height: 150%;
+    	width: 10%;
     }
 
 }
