--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -2,11 +2,6 @@ body {
 		margin: 1em;
 	}
 
-.white {
-	position: relative;
-	height: auto;
-}
-
 @media (max-width: 800px) {
 
     #wrapper {
@@ -30,7 +25,7 @@ body {
     	width: 100%;
     	height:5em;
     	margin: 0px;
-
+    	postion: relative;
     }
 
     .embelem {
@@ -38,6 +33,18 @@ body {
     	margin: -1em 0px 0px 4%;
     	height: 150%;
     	width: 10%;
+    }
+
+    .logo {
+    	margin: 1em 0px 0px 10%;
+    	background-size: 70% 76%;
+		width: 70%;
+    }
+
+    .careline {
+    	margin: -4em 7% 0 0;
+    	width: 22%;
+    	text-align: center;
     }
 
 }
