--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -25,7 +25,7 @@ body {
     	width: 100%;
     	height:5em;
     	margin: 0px;
-    	postion: relative;
+    	position: relative;
     }
 
     .embelem {
