more careline tweaks

--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -18,7 +18,8 @@ body {
 		background-size: 100% 100%;
 		width: 100%;
     }
-
+    /*After I have this version clean, I want to make a smaller phone version that puts the careline
+    underneath the logo*/
     .white {
     	background-position: 5% 100%;
     	background-size: 65% 90%;
@@ -37,12 +38,13 @@ body {
 
     .logo {
     	margin: 1em 0px 0px 10%;
-    	background-size: 70% 76%;
+    	background-size: 70% 65%;
 		width: 70%;
     }
 
     .careline {
-    	margin: -4em 7% 0 0;
+    	font-size: 10px;
+    	margin: -6em 7% 0 0 !important;
     	width: 22%;
     	text-align: center;
     }
