--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -2,7 +2,7 @@ body {
 		margin: 1em;
 	}
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
 
     #wrapper {
         width: 100%;
@@ -41,12 +41,32 @@ body {
     	background-size: 70% 65%;
 		width: 70%;
     }
-
+    /*Need to get rid of these importants somehow*/
     .careline {
-    	font-size: 10px;
+    	font-size: 10px !important;
     	margin: -6em 7% 0 0 !important;
     	width: 22%;
     	text-align: center;
     }
+
+    div.menu {
+    	background-size: 100% 100%;
+    	position: relative;
+    	margin: 0em 0px 0px -0.2em;
+    	width: 101%;
+    	height: 4em;
+    }
+
+    .menu .module ul.menu {
+    	margin: 0em !important;
+    }
+
+    .menu .module ul.menu li {
+    	margin-top: 0.5em;
+    }
+
+}
+
+@media (max-width: 600px) {
 
 }
