--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -19,8 +19,8 @@ body {
 
     #header {
     	height: 100%;
-		background-position: 100% 100%;
-		background-size: 100% 100%;
+		background-position: 100% 0%;
+		background-size: 100% 85%;
 		width: 100%;
     }
     /*After I have this version clean, I want to make a smaller phone version that puts the careline
@@ -55,10 +55,10 @@ body {
     }
 
     div.menu {
-    	background-size: 99.8% 100%;
+    	background-size: 99.8% 91%;
     	position: relative;
     	margin: 0em 0px 0px -0.2em;
-    	width: 101%;
+    	width: 101.1%;
     	height: 4em;
     }
 
@@ -70,8 +70,14 @@ body {
     	margin-top: 0.5em;
     }
 
+    .item42, .item43 {
+    	display: none;
+    }
+
     div.modheader.standard {
-    	display:none;
+    	margin: -2em 1.5% -2% 1.5%;
+    	background-size: 14%;
+    	height: 1em;
     }
 }
 
