--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -154,6 +154,11 @@ body {
     	background-size: 100%;
     	background-position: 100% 100%;
     }
+
+    .modulecallus, .modulemakeappt {
+    	float: left;
+    	margin: 0;
+    }
 }
 
 @media (max-width: 600px) {
