fixes to careline text in footer

--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -162,7 +162,13 @@ body {
 
     .footer {
     	background-size: 100%;
-    	width: 100%
+    	width: 100%;
+    }
+
+    .careline.c380 {
+    	font-size: 1.6em;
+    	margin: 16px 15px 0 0;
+    	width: auto;
     }
 }
 
