--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -172,6 +172,26 @@ body {
     }
 }
 
+@media (max-width: 860px) {
+	.footer {
+		/*Replace background image with gradient*/
+		background: #4b5f2d; /* Old browsers */
+		background: -moz-linear-gradient(-45deg,  #4b5f2d 0%, #5b7437 10%, #5b7437 91%, #4b5f2d 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#4b5f2d), color-stop(10%,#5b7437), color-stop(91%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* IE10+ */
+		background: linear-gradient(135deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b5f2d', endColorstr='#4b5f2d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+		/*round the corners to make it look like the button*/
+		-webkit-border-radius: 11px;
+		-moz-border-radius: 11px;
+		border-radius: 11px;
+
+		height: 12em;
+	}
+}
+
 @media (max-width: 600px) {
 
 }
