trying to debug careline and get rid of important tags

--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -48,8 +48,8 @@ body {
     }
     /*Need to get rid of these importants somehow*/
     .careline {
-    	font-size: 10px !important;
-    	margin: -6em 3% 0 0 !important;
+    	/*font-size: 10px !important;
+    	margin: -6em 3% 0 0 !important;*/
     	width: 29%;
     	text-align: center;
     }
