--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -26,45 +26,47 @@ body {
     /*After I have this version clean, I want to make a smaller phone version that puts the careline
     underneath the logo*/
     .white {
-    	background-position: 5% 150%;
-    	background-size: 65% 90%;
-    	width: 100%;
-    	height:5em;
-    	margin: 0px;
+    	background-position: 0% 0%;
+		background-size: 100% 100%;
+		width: 57%;
+		height: 6em;
+    	margin: 1em;
     	position: relative;
+    	float: left;
     }
 
     .embelem {
     	background-size: auto 100%;
-    	margin: -1em 0px 0px 4%;
     	height: 150%;
+		background-position: 0% 20%;
+		margin: -5% 1% 1% 5%;
     	width: 10%;
     }
 
     .logo {
-    	margin: 1.3em 0px 0px 10%;
-    	background-size: 70% 65%;
-		width: 70%;
-    }
-    /*Need to get rid of these importants somehow*/
-    .careline {
-    	/*font-size: 10px !important;
-    	margin: -6em 3% 0 0 !important;*/
-    	width: 29%;
-    	text-align: center;
+    	height: 100%;
+		width: 100%;
+		background-position: 67% 50%;
+		background-size: 75%;
+		margin: 1em 1em 0 1em;
     }
 
-    div.menu {
+    #header .careline {
+		font-size: 0.8em;
+		margin: 3em 3em 0em 0em;
+		width: 27%;
+	}
+
+    .header div.menu {
     	background-size: 99.8% 91%;
     	position: relative;
     	margin: 0em 0px 0px -0.2em;
     	width: 101.1%;
-    	height: 4em;
     	overflow: hidden;
     }
 
     .menu .module ul.menu {
-    	margin: 3px 5% 0px 10%;
+    	margin: -0.4% 5% 0 10%;
     }
 
     .menu .module ul.menu li {
@@ -77,8 +79,8 @@ body {
 
     div.modheader.standard {
     	margin: -2em 1.5% -2% 1.5%;
-    	background-size: 14%;
-    	height: 1em;
+    	background-size: 15%;
+    	height: 2em;
     }
 
     .homeTop {
@@ -101,6 +103,7 @@ body {
     	height: 4em;
     	width: 97%;
     	clear: left;
+    	margin: 1em 0 0 0;
     }
 
     .modulehomeSideMenu {
@@ -157,7 +160,7 @@ body {
 
     .modulecallus, .modulemakeappt {
     	float: left;
-    	margin: 0;
+    	margin: 0 0 0 1em;
     }
 
     .footer {
@@ -175,19 +178,31 @@ body {
 @media (max-width: 860px) {
 	.footer {
 		/*Replace background image with gradient*/
-		background: #4b5f2d; /* Old browsers */
-		background: -moz-linear-gradient(-45deg,  #4b5f2d 0%, #5b7437 10%, #5b7437 91%, #4b5f2d 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#4b5f2d), color-stop(10%,#5b7437), color-stop(91%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* IE10+ */
-		background: linear-gradient(135deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b5f2d', endColorstr='#4b5f2d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+		background: #5b7437; /* Old browsers */
+		background: -moz-linear-gradient(top,  #5b7437 39%, #4b5f2d 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(39%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #5b7437 39%,#4b5f2d 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b7437', endColorstr='#4b5f2d',GradientType=0 ); /* IE6-9 */
+
+		/*Original gradient - diagonal*/
+		/*background: #4b5f2d; /* Old browsers */
+		/*background: -moz-linear-gradient(-45deg,  #4b5f2d 0%, #5b7437 10%, #5b7437 91%, #4b5f2d 100%); /* FF3.6+ */
+		/*background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#4b5f2d), color-stop(10%,#5b7437), color-stop(91%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
+		/*background: -webkit-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
+		/*background: -o-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Opera 11.10+ */
+		/*background: -ms-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* IE10+ */
+		/*background: linear-gradient(135deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* W3C */
+		/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b5f2d', endColorstr='#4b5f2d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 		/*round the corners to make it look like the button*/
 		-webkit-border-radius: 11px;
 		-moz-border-radius: 11px;
 		border-radius: 11px;
 
+		box-shadow: 0px 1px 7px black;
 		height: 12em;
 	}
 }
