--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -43,7 +43,7 @@ body {
     	width: 10%;
     }
 
-    .logo {
+    .white .logo {
     	height: 100%;
 		width: 100%;
 		background-position: 67% 50%;
@@ -57,7 +57,7 @@ body {
 		width: 27%;
 	}
 
-    .header div.menu {
+    #header div.menu {
     	background-size: 99.8% 91%;
     	position: relative;
     	margin: 0em 0px 0px -0.2em;
@@ -178,14 +178,15 @@ body {
 @media (max-width: 860px) {
 	.footer {
 		/*Replace background image with gradient*/
-		background: #5b7437; /* Old browsers */
-		background: -moz-linear-gradient(top,  #5b7437 39%, #4b5f2d 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(39%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  #5b7437 39%,#4b5f2d 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  #5b7437 39%,#4b5f2d 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b7437', endColorstr='#4b5f2d',GradientType=0 ); /* IE6-9 */
+		background: #86aa46; /* Old browsers */
+		background: -moz-linear-gradient(top,  #86aa46 0%, #65803d 3%, #65803d 40%, #5b7437 63%, #4b5f2d 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#86aa46), color-stop(3%,#65803d), color-stop(40%,#65803d), color-stop(63%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#86aa46', endColorstr='#4b5f2d',GradientType=0 ); /* IE6-9 */
+
 
 		/*Original gradient - diagonal*/
 		/*background: #4b5f2d; /* Old browsers */
