--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -28,9 +28,9 @@ body {
     .white {
     	background-position: 0% 0%;
 		background-size: 100% 100%;
-		width: 57%;
+		width: 63%;
 		height: 6em;
-    	margin: 1em;
+    	margin: 1em 0em 0em 1.2em;
     	position: relative;
     	float: left;
     }
@@ -39,21 +39,21 @@ body {
     	background-size: auto 100%;
     	height: 150%;
 		background-position: 0% 20%;
-		margin: -5% 1% 1% 5%;
-    	width: 10%;
+		margin: -6% 1% 1% 3%;
+    	width: 16%;
     }
 
     .white .logo {
     	height: 100%;
 		width: 100%;
-		background-position: 67% 50%;
-		background-size: 75%;
-		margin: 1em 1em 0 1em;
+		background-position: 60% 50%;
+		background-size: 82%;
+		margin: 0;
     }
 
     #header .careline {
 		font-size: 0.8em;
-		margin: 3em 3em 0em 0em;
+		margin: 3em 2em 0em 0em;
 		width: 27%;
 	}
 
@@ -66,7 +66,7 @@ body {
     }
 
     .menu .module ul.menu {
-    	margin: -0.4% 5% 0 10%;
+    	margin: -0.7% 5% 0 13%;
     }
 
     .menu .module ul.menu li {
@@ -203,9 +203,21 @@ body {
 		-moz-border-radius: 11px;
 		border-radius: 11px;
 
-		box-shadow: 0px 1px 7px black;
+		box-shadow: 1px 2px 7px black;
 		height: 12em;
 	}
+
+	.title.c380 {
+		margin: 0.8em 0 0 0.8em;
+	}
+
+	.c140 {
+		margin: 1.5em;
+	}
+
+	.c140.left {
+		width: auto;
+	} 
 }
 
 @media (max-width: 600px) {
