--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -58,6 +58,47 @@ body {
     	margin: 0em 0px 0px -0.2em;
     	width: 101.1%;
     	overflow: hidden;
+        height: 40px;
+        background: #7a428d; /* Old browsers */
+        background: -moz-linear-gradient(top, #7a428d 0%, #703d81 27%, #663777 64%, #60346f 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7a428d), color-stop(27%,#703d81), color-stop(64%,#663777), color-stop(100%,#60346f)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* IE10+ */
+        background: linear-gradient(to bottom, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a428d', endColorstr='#60346f',GradientType=0 ); /* IE6-9 */
+        background-color: #6D3C7F;
+        
+        -moz-box-shadow: 0px 2px 4px #361E3F;
+        
+        box-shadow: 0px 2px 4px #361E3F;
+        
+        box-shadow: 0px 2px 4px #361E3F;
+    }
+
+    div.menu:after {
+        content: ' ';
+        position: absolute;
+        width: 0;
+        height: 0;
+        left: 0px;
+        top: 100%;
+        border-width: 5px 10px;
+        border-style: solid;
+        border-color: #140C17 #140C17 transparent transparent;
+    }
+
+    div.menu:before {
+        content: ' ';
+        position: absolute;
+        width: 0;
+        height: 0;
+        left: 0;
+        top: 100%;
+        margin-left:98%;
+        border-width: 5px 10px;
+        border-style: solid;
+        border-color: #140C17 transparent transparent #140C17;
     }
 
     .menu .module ul.menu {
@@ -66,10 +107,6 @@ body {
 
     .menu .module ul.menu li {
     	margin-top: 0.5em;
-    }
-
-    .item42, .item43 {
-    	display: none;
     }
 
     div.modheader.standard {
