--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -52,11 +52,14 @@ body {
 		width: 27%;
 	}
 
+    .slidewrap {
+        overflow: hidden;
+    }
+
     #header div.menu {
-    	background-size: 99.8% 91%;
     	position: relative;
-    	margin: 0em 0px 0px -0.2em;
-    	width: 101.1%;
+    	margin: 0;
+    	width: 100%;
     	overflow: hidden;
         height: auto;
         background: #7a428d; /* Old browsers */
@@ -206,6 +209,35 @@ body {
     	margin: 16px 15px 0 0;
     	width: auto;
     }
+
+    /* John's code*/
+    #slidewrap {
+        overflow: hidden;
+        height: auto !important;
+    }
+
+    #slideshow {
+        width: 100% !important;
+    }
+
+    #slideshow div {
+        overflow: auto !important;
+        padding-bottom: 31.428571428571% !important;
+        height: 0 !important;
+    }
+
+    #slideshow div a, #slideshow div a img {
+        left: auto !important;
+        right: 0px !important;
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    #slideshow div a img {
+        width: 100% !important;
+        height: 100% !important;
+    }
+    /*end of John's code*/
 }
 /*tablets*/
 @media (max-width: 860px) {
