fix on John's code

--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -224,6 +224,7 @@ body {
         overflow: auto !important;
         padding-bottom: 31.428571428571% !important;
         height: 0 !important;
+        width: 100%;
     }
 
     #slideshow div a, #slideshow div a img {
