--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -251,6 +251,14 @@ body {
         border-bottom-color: #491459;
     }
 
+    .c220.first {
+        margin: 1em 0;
+    }
+
+    .modulevideoButton {
+        margin:0;
+    }
+
     .modulehomeSideMenu {
         background: #4a1359; /* Old browsers */
         background: -moz-linear-gradient(top, #4a1359 0%, #7a2293 50%, #491459 99%); /* FF3.6+ */
@@ -365,6 +373,11 @@ body {
 
 /*iphones, etc.*/
 @media (max-width: 475px) {
+
+    body {
+        margin: 0 0.25em;
+    }
+
     .white {
         margin-top: 4%;
     }
@@ -398,14 +411,19 @@ body {
     }
 
     .modulecallus, .modulemakeappt {
-        width: auto;
-        float: none;
+        width: 50%;
+        float: left;
         margin-left: 0;
     }
 
     .modulecallus img, .modulemakeappt img {
         width: 100%;
         height: auto;
+    }
+
+    .c220.left {
+        width: 100%;
+        margin: 0;
     }
 
     .footer {
