--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -270,6 +270,7 @@ body {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a1359', endColorstr='#491459',GradientType=0 ); /* IE6-9 */
         border-radius: 10px;
         box-shadow: 0px 1px 14px black;
+        padding: 1em;
     }
 
 	.footer {
@@ -394,6 +395,12 @@ body {
 
     .modheader.standard {
         background-size: 26%;
+    }
+
+    .modulehomeSideMenu {
+        padding: 1em 0.5em 0.5em 1em;
+        width: 100%;
+        float: right;
     }
 
     .modulehomeSideMenu ul.menu {
