--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -331,13 +331,6 @@ body {
 		margin: 0.8em 0 0 0.8em !important;
 	}
 
-	.careline.c380 {
-		font-size: 17px;
-        width: 115px;
-        float: right;
-        margin-right: 1em;
-	}
-
 	.c140 {
 		margin: 1.5em !important;
 	}
@@ -345,6 +338,13 @@ body {
 	.c140.left {
 		width: auto;
 	} 
+
+    .footer .careline.c380 {
+        font-size: 17px;
+        width: 115px;
+        float: right;
+        margin-right: 1em;
+    }
 
 	.footer .alignright {
 		float: right;
@@ -393,8 +393,6 @@ body {
 
     .footer .careline.c380 {
         font-size: 14px;
-        float: left;
-        margin: 1em 0 0 2em;
     }
 
     .footer .alignright {
