--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -115,7 +115,7 @@ body {
     
     /*for making the drop down menus stack properly*/
     .parent ul.drop {
-        position: fixed;
+        position: fixed !important;
         z-index: 999;
     }
 
