--- a/womenscenter.org/css/retrofit.css
+++ b/womenscenter.org/css/retrofit.css
@@ -13,7 +13,7 @@ body {
     }
 
     #header {
-    	height: 100%;
+    	height: 10em;
 		background-position: 100% 0%;
 		background-size: 100% 85%;
 		width: 100%;
@@ -58,9 +58,10 @@ body {
 
     #header div.menu {
     	position: relative;
-    	margin: 0;
+    	margin: 1em 0 0 0;
     	width: 100%;
     	overflow: hidden;
+        float: left;
         height: auto;
         background: #7a428d; /* Old browsers */
         background: -moz-linear-gradient(top, #7a428d 0%, #703d81 27%, #663777 64%, #60346f 100%); /* FF3.6+ */
@@ -171,18 +172,7 @@ body {
 
     .modulehomeSideMenu ul li {
     	float: left;
-    }
-
-    .modulehomeSideMenu ul li.item61 {
-    	width: 28%;
-    }
-
-    .modulehomeSideMenu ul li.item62 {
-    	width: 32%;
-    }
-
-    .modulehomeSideMenu ul li.item63 {
-    	width: 40%;
+        width: 33%;
     }
 
     .modulehomeSideMenu ul li span.separator {
@@ -272,6 +262,7 @@ body {
 }
 /*tablets*/
 @media (max-width: 860px) {
+
     .homeTop {
         background-image:none;
         height: auto;
@@ -358,6 +349,10 @@ body {
 }
 /*big phones and small tablets*/
 @media (max-width: 715px) {
+    #header {
+        height: 12em;
+    }
+
     .white {
         width: 96%;
     margin: 3% 2% 0 2%;
@@ -382,6 +377,15 @@ body {
     #header .menu .module ul.menu {
         margin: -0.7% 5% 0 4%;
     }
+
+    #header div.menu {
+        margin: 0;
+    }
+
+    #header div.modheader.standard {
+        margin: -0.5em 1.5% -2% 1.5%;
+    }
+
     /* specifically for the contact page images*/
     h5 img, h4 img {
         width: 100%;
@@ -440,6 +444,7 @@ body {
 
     .modheader.standard {
         background-size: 26%;
+        margin: 1em 1.5% -2% 1.5%;;
     }
 
     .modulehomeSideMenu {
